--- a/.github/workflows/Image-Manager.yml
+++ b/.github/workflows/Image-Manager.yml
@@ -1,11 +1,6 @@
 name: Image-Manager
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
   workflow_dispatch:
     inputs:
       environment:
@@ -13,7 +8,7 @@ on:
         type: environment
         required: true
 jobs:
-  build:
+  nginx-proxy-manager:
     runs-on: ubuntu-latest
     environment: ${{ github.event.inputs.environment }}
 
@@ -27,7 +22,7 @@ jobs:
 
       - name: Re-tagging the Image
         run: |
-          docker tag jc21/nginx-proxy-manager:latest ghcr.io/local-home-lab/nginx-proxy-manager:latest
+          docker tag jc21/nginx-proxy-manager:latest ${{ secrets.DOCKER_REGISTERY }}nginx-proxy-manager:latest
 
       - name: Docker Login
         uses: docker/login-action@v3.1.0
@@ -38,4 +33,4 @@ jobs:
 
       - name: Pushing the Image
         run: |
-          docker push ghcr.io/local-home-lab/nginx-proxy-manager:latest
+          docker push ${{ secrets.DOCKER_REGISTERY }}nginx-proxy-manager:latest
