--- a/.github/workflows/Image-Manager.yml
+++ b/.github/workflows/Image-Manager.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Re-tagging the Image
         run: |
-          docker tag jc21/nginx-proxy-manager:latest ${{ secrets.DOCKER_REGISTERY }}nginx-proxy-manager:latest
+          docker tag jc21/nginx-proxy-manager:latest ${{ secrets.DOCKER_REGISTERY }}/nginx-proxy-manager:latest
 
       - name: Docker Login
         uses: docker/login-action@v3.1.0
@@ -33,4 +33,4 @@ jobs:
 
       - name: Pushing the Image
         run: |
-          docker push ${{ secrets.DOCKER_REGISTERY }}nginx-proxy-manager:latest
+          docker push ${{ secrets.DOCKER_REGISTERY }}/nginx-proxy-manager:latest
