--- a/.github/workflows/Image-Manager.yml
+++ b/.github/workflows/Image-Manager.yml
@@ -62,3 +62,31 @@ jobs:
       - name: Pushing the Image
         run: |
           docker push ${{ secrets.DOCKER_REGISTERY }}/container-image-management:bookstack
+
+  portainer:
+    runs-on: ubuntu-latest
+    needs: bookstack
+    environment: ${{ github.event.inputs.environment }}
+
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v4
+
+      - name: Downloading the Latest Docker Image
+        run: |
+          docker pull portainer/portainer-ce:latest
+
+      - name: Re-tagging the Image
+        run: |
+          docker tag linuxserver/bookstack:latest ${{ secrets.DOCKER_REGISTERY }}/container-image-management:portainer-ce
+
+      - name: Docker Login
+        uses: docker/login-action@v3.1.0
+        with:
+          registry: ${{ secrets.DOCKER_REGISTERY_URL }}
+          username: ${{ secrets.DOCKER_LOGIN }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Pushing the Image
+        run: |
+          docker push ${{ secrets.DOCKER_REGISTERY }}/container-image-management:portainer-ce
